aws/RouteTables-ap-south-1.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true, 
     "RouteTableAssociationId": "rtbassoc-fe3c5697", 
     "RouteTableId": "rtb-f5951c9c"
    }
   ], 
   "PropagatingVgws": [], 
   "RouteTableId": "rtb-f5951c9c", 
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16", 
     "GatewayId": "local", 
     "Origin": "CreateRouteTable", 
     "State": "active"
    }, 
    {
     "DestinationCidrBlock": "0.0.0.0/0", 
     "GatewayId": "igw-2d56f144", 
     "Origin": "CreateRoute", 
     "State": "active"
    }
   ], 
   "Tags": [], 
   "VpcId": "vpc-9ac442f3"
  }
 ]
}
